--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "browserslist": "^4.12.0",
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
