--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.4",
     "gsap": "^3.2.6",
     "postcss-loader": "^3.0.0",
+    "swiper": "^5.4.1",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -50,6 +52,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": ["error", {
+        "ignoreWhenBindingPresent": true
+      }]
+    }
   }
 }
