--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
