--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "swiper": "^5.4.1",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.3"
