--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
+    "axios": "^0.19.2",
     "browserslist": "^4.12.0",
     "core-js": "^3.6.4",
     "gsap": "^3.2.6",
