--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,12 +57,19 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/no-unused-components": [
-        "error",
-        {
-          "ignoreWhenBindingPresent": true
-        }
-      ]
+      "vue/no-unused-components": "off",
+      "vue/no-dupe-keys": "off",
+      "vue/no-duplicate-attributes": "off",
+      "vue/no-reserved-keys": "off",
+      "vue/no-shared-component-data": "off",
+      "vue/no-template-key": "off",
+      "vue/no-unused-vars": "off",
+      "vue/no-use-v-if-with-v-for": "off",
+      "vue/require-component-is": "off",
+      "vue/require-prop-type-constructor": "off",
+      "vue/require-render-return": "off",
+      "vue/require-v-for-key": "off",
+      "vue/require-valid-default-prop": "off"
     }
   }
 }
