--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "swiper": "^5.4.1",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-meta": "^2.4.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
     "vuelidate": "^0.7.5",
